--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   creationTimestamp: null
   name: mongo-credentials
 data:
-  password: #add your password here
-  username: #add your username here
+  password: ${MY_SECRET_PASSWORD}
+  username: ${MY_SECRET_USERNAME}
