--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   creationTimestamp: null
   name: mongo-credentials
 data:
-  password: ${MY_SECRET_PASSWORD}
-  username: ${MY_SECRET_USERNAME}
+  password: #your base64 password
+  username: #your base64 username
